Finalizar as coisas ;-;